--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -9,7 +9,8 @@ html {
 
 body {
   -webkit-font-smoothing: antialiased;
-  background: var(--color-background);
+  background-color: var(--color-background);
+  /* background-image: url(../images/texture2.png); */
   color: var(--color-text);
   margin: 0;
   overflow-x: hidden;
